welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.code
def arrayCount9(nums:Array[Int]): Int =
{
  var compteur:Int = 0
  
  for(i <- 0 to nums.length-1)
  {
    if(num(i)==9)
    {
      compteur = compteur +1
    }
  }
  
  return compteur
}